--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -2,9 +2,7 @@ name: 'test AWS Access'
 
 # The workflow should only trigger on pull requests to the main branch
 on:
-  pull_request:
-    branches:
-      - main
+  push
 
 jobs:
   aws:
